<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/player_error_message"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/status_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_player_status_view_btn"
        android:gravity="center"
        android:paddingLeft="18dp"
        android:paddingTop="4dp"
        android:paddingRight="18dp"
        android:paddingBottom="4dp"
        android:text="@string/player_retry"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_player_item_selection"
        android:gravity="center"
        android:paddingLeft="18dp"
        android:paddingTop="8dp"
        android:paddingRight="18dp"
        android:paddingBottom="8dp"
        android:text="@string/player_skip"
        android:textColor="?attr/colorSecondary"
        android:visibility="gone"
        tools:visibility="visible" />

</LinearLayout>