<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="105dp"
    android:layout_gravity="bottom"
    android:background="@drawable/shadow_player_controller_bottom">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/seekLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="25dp"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/tvPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="48dp"
                android:paddingEnd="5dp"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="00:00" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@null"
                android:max="1000"
                android:maxHeight="2dp"
                android:minHeight="2dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:progressDrawable="@drawable/player_video_seekbar"
                android:thumb="@drawable/player_video_seek_thumb"
                android:thumbOffset="0dp" />

            <TextView
                android:id="@+id/tvDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end|center_vertical"
                android:minWidth="48dp"
                android:paddingStart="5dp"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="00:00" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ibPlay"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:background="?selectableItemBackgroundBorderless"
                app:srcCompat="@drawable/selector_player_play_button"
                app:tint="@color/selector_player_video_press_color" />

            <ImageButton
                android:id="@+id/ibNext"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:alpha="0.5"
                android:background="?selectableItemBackgroundBorderless"
                app:srcCompat="@drawable/ic_round_skip_next_24"
                app:tint="@color/selector_player_video_press_color" />

            <TextView
                android:id="@+id/tvSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:alpha="0.5"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:visibility="gone"
                tools:text="1920×1080" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvSelect"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?selectableItemBackgroundBorderless"
                android:gravity="center"
                android:minWidth="55dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/player_select_video"
                android:textColor="@color/selector_player_video_press_color"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSpeed"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?selectableItemBackgroundBorderless"
                android:gravity="center"
                android:minWidth="55dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/player_play_speed"
                android:textColor="@color/selector_player_video_press_color"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvScale"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?selectableItemBackgroundBorderless"
                android:gravity="center"
                android:minWidth="55dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/player_scale_size"
                android:textColor="@color/selector_player_video_press_color"
                android:textSize="14sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/ibFullscreen"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:background="?selectableItemBackgroundBorderless"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_player_rotation_24"
                app:tint="@color/selector_player_video_press_color" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>